--- a/nintendo.html
+++ b/nintendo.html
@@ -35,7 +35,7 @@
         which revolutionized the industry, and introducing the 10NES lockout chip, which prevented the use of third-party 
         cartridges.
       </p>
-      <img src="images/nes1.png" alt="NES">
+      <img class="im-size" src="images/nes1.png" alt="NES">
     </section>
     
     <section id="marketing">
@@ -49,7 +49,7 @@
         NES was successfully able to change the perception of consumers and retailers with marketing campaigns that 
         built trust and reframed the damaged North American video game industry after the crash of 1983
       </p>
-      <iframe 
+      <iframe class="im-size"
         width="420" height="315" src="https://www.youtube.com/embed/C6KOlC393lo" 
         title="YouTube video player" allow="accelerometer; autoplay; 
         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -71,7 +71,7 @@
         consumer confidence and satisfaction. That&#8217;s how Nintendo helped rebuild the North American gaming industry after the 
         crash through the limitation of third&ndash;party video games.  
       </p>
-      <img src="images/nes2.png" alt="Seal">
+      <img class="im-size" src="images/nes2.png" alt="Seal">
     </section>
     
     <section id="summary">
@@ -85,7 +85,7 @@
         crash from taking place in the future. Nintendo became more significant than a gaming console; it became part of many kids&#8217; sweet childhood 
         memories with famous characters such as Mario. Now those kids have grown to adulthood but still associate themselves with Nintendo&#8217;s legacy and the fandom.
       </p>
-      <img src="images/nes4.png" alt="NES Photo">
+      <img  class="im-size" src="images/nes4.png" alt="NES Photo">
     </section>
     <footer>
       <p>Created By: Mitansh Chaudhari</p>
