--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li id="onpage"><a href="index.html">Home: Resume</a></li>
             <li><a href="india.html">Places to Visit</a></li>
             <li><a href="nintendo.html">Nintendo </a></li>
+            <li><a href="googleMaps.html">Google Maps </a></li>
           </ul>
         </div>
       </nav>
