--- a/googleMaps.html
+++ b/googleMaps.html
@@ -5,32 +5,25 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/normalize.css">
+    <script src="jsCode/maps.js"></script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcD21LhGOtZ0sxnAevyIUlR5iqrXH4cVI&callback=initMap" async defer>
+</script>
   </head>
-  <header>
-    <nav id="main-navbar">
-      <div id="navbar-container">
-        <ul>
-          <li><a href="index.html">Home: Resume</a></li>
-          <li><a href="india.html">Places to Visit</a></li>
-          <li><a href="nintendo.html">Nintendo </a></li>
-          <li id="onpage"><a href="googleMaps.html">Google Maps </a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+
   <body>
+    <header>
+        <nav id="main-navbar">
+          <div id="navbar-container">
+            <ul>
+              <li><a href="index.html">Home: Resume</a></li>
+              <li><a href="india.html">Places to Visit</a></li>
+              <li><a href="nintendo.html">Nintendo </a></li>
+              <li id="onpage" ><a href="googleMaps.html">Google Maps </a></li>
+            </ul>
+          </div>
+        </nav>
+     </header>
     <div id="map"></div>
-    <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
-        });
-      }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
-    async defer></script>
   </body>
 </html>
