--- a/nintendo.html
+++ b/nintendo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
   </head>
 
-  <body>
+  <body id="nin1">
     <header>
       <nav id="main-navbar">
         <div id="navbar-container">
