--- a/nintendo.html
+++ b/nintendo.html
@@ -5,6 +5,7 @@
     <title>Project 2: Nintendo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <script src="jsCode/slider.js"></script>
   </head>
 
   <body id="nin1">
