--- a/googleMaps.html
+++ b/googleMaps.html
@@ -26,7 +26,8 @@
         </nav>
      </header>
      <h1 id="h-1">Welcome to IIT Google Maps!!!</h1>
+     <h2 id="h-2">Click The Location Sysmbol for Info!</h2>
      <div id="map" class="map"></div>
-     <div id="content">Click The Location Sysmbol for Info!</div>
+    
   </body>
 </html>
