--- a/india.html
+++ b/india.html
@@ -73,20 +73,20 @@
     </section>
     <div class="slidercontainer">  
       <div class="showSlide fade">  
-          <img src="images/img1.png" />  
+          <img src="images/img1.png" alt="Shimla Photo">  
           <div class="content"></div>  
       </div>  
       <div class="showSlide fade">  
-          <img src="images/img2.png"/>  
+          <img src="images/img2.png" alt="Kerala">  
           <div class="content"></div>  
       </div>  
 
       <div class="showSlide fade">  
-          <img src="images/img3.png"/>  
+          <img src="images/img3.png" alt="Blue City">  
           <div class="content"></div>  
       </div>  
       <div class="showSlide fade">  
-          <img src="images/img4.png"/>  
+          <img src="images/img4.png" alt="Golden Temple">  
           <div class="content"></div>  
       </div>  
       <!-- Navigation arrows -->  
