fixed the label for the overall project

--- a/googleMaps.html
+++ b/googleMaps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Google Maps</title>
+    <title>Project 3:Google Maps</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
