--- a/googleMaps.html
+++ b/googleMaps.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <script src="jsCode/maps.js"></script>
     <script async
     src="https://maps.googleapis.com/maps/api/js?v=beta&key=AIzaSyDcD21LhGOtZ0sxnAevyIUlR5iqrXH4cVI&callback=initMap" >
